lib/brevity/parsing/changes/changes.treetop
module Brevity

grammar Changes
  include DynamicChange
  include TempoChange
  
  rule changes
    tempo_dynamic_changes / dynamic_tempo_changes
  end
  
  rule tempo_dynamic_changes
    tc:tempo_change more:([\s]+ dynamic_change)? <TempoDynamicChangesNode>
  end
  
  rule dynamic_tempo_changes
    dc:dynamic_change more:([\s]+ tempo_change)? <DynamicTempoChangesNode>
  end
end

end
